# moku

./: .gitignore  .golangci.yml  DEMO.md  Makefile  PR_SUMMARY.md  README.md  WEBCLIENT_USAGE.md  coverage.out  go.mod  go.sum  main.go  main_test.go  make.go  t1.json
services/analyzer/: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  scan.py
services/analyzer/app/: __init__.py  app_factory.py  net_guard.py
services/analyzer/app/adapters/: __init__.py  _helpers.py  base.py  builtin_adapter.py  cli_scanner.py  nikto_adapter.py  nuclei_adapter.py  registry.py  shodan_adapter.py  virustotal_adapter.py  zap_adapter.py
services/analyzer/app/api/: __init__.py  routes.py  security.py
services/analyzer/app/core/: __init__.py  cli_display.py  evidence_store.py  executor.py  finding.py  job_store.py  runner.py  scan_unit.py  test_case.py
services/analyzer/app/models/: __init__.py  schemas.py
services/analyzer/app/plugins/: __init__.py  (+5 more)
services/analyzer/scripts/: health.ps1  health.sh  schema_check.py  start.ps1  start.sh  stop.ps1  stop.sh
services/analyzer/tests/: conftest.py  test_adapter_helpers.py  test_builtin_adapter.py  test_capabilities_conformance.py  test_cli_display.py  test_cli_scanner.py  test_contract_golden.py  test_csrf_plugin.py  test_evidence_store.py  test_executor.py  test_finding.py  test_job_store.py  test_models.py  test_net_guard.py  test_nikto_adapter.py  test_nuclei_adapter.py  test_registry.py  test_routes.py  test_runner.py  test_scan_unit.py  test_schemas_conformance.py  test_security.py  test_shodan_adapter.py  test_sqli_plugin.py  test_virustotal_adapter.py  test_xss_plugin.py  test_zap_adapter.py
(+462 files in other folders)
